--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3307/dodgedemodb
 spring.datasource.username=root
 spring.datasource.password=dbpass
@@ -31,3 +31,10 @@ security.jwt.grant-type=password
 security.jwt.scope-read=read
 security.jwt.scope-write=write
 security.jwt.resource-ids=testjwtresourceid
+
+#################### Spring Boot Actuator properties#######################
+management.security.roles=STANDARD_USER
+endpoints.metrics.id=metrics
+endpoints.metrics.sensitive=false
+endpoints.shutdown.enabled=false
+endpoints.actuator.enabled=true
